--- a/.github/workflows/K2P SSR Only.yml
+++ b/.github/workflows/K2P SSR Only.yml
@@ -7,29 +7,25 @@
 # <https://github.com/KFERMercer/OpenWrt-CI>
 #
 
-name: K2P SSR Only
+name: OpenWrt-CI
 
 on:
-  push:
-    branches:
-      - master
   schedule:
-    - cron: 0 0 * * 5
-  release:
-    types: [edited]
+    - cron: 0 20 * * *
+  push:
+    tags:
+      - '*'
 
 jobs:
 
   build_openwrt:
 
-    name: Build OpenWrt
-    runs-on: ubuntu-latest
-    if: github.event.repository.owner.id == github.event.sender.id
+    name: Build OpenWrt and release
+    runs-on: ubuntu-18.04
 
     steps:
-
       - name: Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
         with:
           ref: master
 
@@ -41,25 +37,15 @@ jobs:
           sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d
           sudo -E apt-get -y purge azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php*
           sudo -E apt-get update
-          sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch python3 unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs gcc-multilib g++-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler antlr3 gperf
+          sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch python3 unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs gcc-multilib g++-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler antlr3 gperf swig
           sudo -E apt-get -y autoremove --purge
           sudo -E apt-get clean
-
-          # sudo mkdir -p -m 777 /mnt/openwrt/bin /mnt/openwrt/build_dir/host /mnt/openwrt/build_dir/hostpkg /mnt/openwrt/dl /mnt/openwrt/feeds /mnt/openwrt/staging_dir
-          # ln -s /mnt/openwrt/bin ./bin
-          # mkdir -p ./build_dir/host && ln -s /mnt/openwrt/build_dir/host ./build_dir/host
-          # mkdir -p ./build_dir/host && ln -s /mnt/openwrt/build_dir/hostpkg ./build_dir/hostpkg
-          # ln -s /mnt/openwrt/dl ./dl
-          # ln -s /mnt/openwrt/feeds ./feeds
-          # ln -s /mnt/openwrt/staging_dir ./staging_dir
-
           df -h
-
       - name: Update feeds
         run: |
+          sed -i 's/\"#src-git\"/\"src-git\"/g' ./feeds.conf.default
           ./scripts/feeds update -a
           ./scripts/feeds install -a
-
       - name: Generate configuration file
         run: |
           rm -f ./.config*
@@ -77,72 +63,10 @@ jobs:
           CONFIG_TARGET_IMAGES_GZIP=y
           EOF
 
-          # 取消编译的插件
-          cat >> .config <<EOF
-          # CONFIG_PACKAGE_adbyby is not set
-          # CONFIG_PACKAGE_etherwake is not set
-          # CONFIG_PACKAGE_kmod-fast-classifier is not set
-          # CONFIG_PACKAGE_kmod-nf-conntrack-netlink is not set
-          # CONFIG_PACKAGE_kmod-shortcut-fe is not set
-          # CONFIG_PACKAGE_kmod-tcp-bbr is not set
-          # CONFIG_PACKAGE_libcap-ng is not set
-          # CONFIG_PACKAGE_libuuid is not set
-          # CONFIG_PACKAGE_luci-app-accesscontrol is not set
-          # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
-          # CONFIG_PACKAGE_luci-app-arpbind is not set
-          # CONFIG_PACKAGE_luci-app-autoreboot is not set
-          # CONFIG_PACKAGE_luci-app-ddns is not set
-          # CONFIG_PACKAGE_luci-app-filetransfer is not set
-          # CONFIG_PACKAGE_luci-app-nlbwmon is not set
-          # CONFIG_PACKAGE_luci-app-ramfree is not set
-          # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_fuse-utils is not set
-          # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
-          # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui is not set
-          # CONFIG_PACKAGE_luci-app-sfe is not set
-          # CONFIG_PACKAGE_luci-app-unblockmusic is not set
-          # CONFIG_PACKAGE_luci-app-upnp is not set
-          # CONFIG_PACKAGE_luci-app-vlmcsd is not set
-          # CONFIG_PACKAGE_luci-app-vsftpd is not set
-          # CONFIG_PACKAGE_luci-app-webadmin is not set
-          # CONFIG_PACKAGE_luci-app-wol is not set
-          # CONFIG_PACKAGE_luci-lib-fs is not set
-          # CONFIG_PACKAGE_miniupnpd is not set
-          # CONFIG_PACKAGE_nlbwmon is not set
-          # CONFIG_PACKAGE_shadowsocksr-libev-ssr-local is not set
-          # CONFIG_PACKAGE_vlmcsd is not set
-          # CONFIG_PACKAGE_vsftpd-alt is not set
-          # CONFIG_PACKAGE_wol is not set
-          CONFIG_PACKAGE_coreutils=y
-          CONFIG_PACKAGE_dns2socks=y
-          CONFIG_PACKAGE_ip-full=y
-          CONFIG_PACKAGE_ipset=y
-          CONFIG_PACKAGE_kmod-ipt-tproxy=y
-          CONFIG_PACKAGE_iptables-mod-tproxy=y
-          CONFIG_PACKAGE_libelf=y
-          CONFIG_PACKAGE_libev=y
-          CONFIG_PACKAGE_libipset=y
-          CONFIG_PACKAGE_libmbedtls=y
-          CONFIG_PACKAGE_libmnl=y
-          CONFIG_PACKAGE_libnet-1.2.x=y
-          CONFIG_PACKAGE_libpcap=y
-          CONFIG_PACKAGE_libsodium=y
-          CONFIG_PACKAGE_microsocks=y
-          CONFIG_PACKAGE_pdnsd-alt=y
-          CONFIG_PACKAGE_resolveip=y
-          CONFIG_PACKAGE_shadowsocks-libev-config=y
-          CONFIG_PACKAGE_shadowsocks-libev-ss-local=y
-          CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y
-          CONFIG_PACKAGE_shadowsocksr-libev-alt=y
-          CONFIG_PACKAGE_simple-obfs=y
-          CONFIG_PACKAGE_tcpping=y
-          EOF
-
           # SSR
           cat >> .config <<EOF
           CONFIG_PACKAGE_luci-app-ssr-plus=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
-          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
-          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
           EOF
 
           sed -i 's/^[ \t]*//g' ./.config
@@ -150,10 +74,8 @@ jobs:
 
       - name: Make download
         run: |
-          make download -j8 || make download -j1 V=s
-          find ./dl/ -size -1024c -exec rm -f {} \;
-          df -h
-
+          make download -j8
+          find dl -size -1024c -exec rm -f {} \;
       - name: Compile firmware
         run: |
           make -j$(nproc) || make -j1 V=s
@@ -162,20 +84,36 @@ jobs:
           echo "======================="
           df -h
           echo "======================="
-          du -h ./ --max-depth=1
-          du -h /mnt/openwrt/ --max-depth=1 || true
-
+          du -h --max-depth=1 ./ --exclude=build_dir --exclude=bin
+          du -h --max-depth=1 ./build_dir
+          du -h --max-depth=1 ./bin
       - name: Prepare artifact
         run: find ./bin/targets/ -type d -name "packages" | xargs rm -rf {}
 
-      - name: Upload config.buildinfo
+      - name: Upload artifact
         uses: actions/upload-artifact@master
         with:
-          name: Config
-          path: ./bin/targets/*/*/config.buildinfo
+          name: OpenWrt_firmware
+          path: ./bin/targets/
 
-      - name: Upload firmware
-        uses: actions/upload-artifact@master
+      - name: Create release
+        if: github.event == 'push'
+        id: create_release
+        uses: actions/create-release@v1.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          name: Sysupgrade
-          path: ./bin/targets/ramips/mt7621/openwrt-ramips-mt7621-phicomm_k2p-squashfs-sysupgrade.bin
+          tag_name: ${{ github.ref }}
+          release_name: ${{ github.ref }}
+          draft: false
+          prerelease: false      
+
+      - name: Upload release asset
+        if: github.event == 'push'
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./bin/targets/*/*/
